# mtgir

./: .gitignore  LICENSE  README.md  pyproject.toml  run
experiments/: cnn.py
src/mtgir/: __init__.py  api.py  cli.py  cnn.py  ir.py  scryfall.py
tests/: __init__.py  test_matching.py
